# live_stream_dash

./: Cargo.toml  README.md
src/: main.rs
static/: index.html  scripts.js  styles.css
