[package]
name = "video_surveillance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["process", "rt-multi-thread"] }
actix-web = "4.0"
actix-files = "0.6.0"
actix-cors = "0.7.0"